--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab2</title>
-    <link href="favicon-16x16.png">favicon-16x16.png</link>
+<!-- For IE 9 and below ICO should be 32x32 pixels in size -->
+<!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
+
+<!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
+<link rel="apple-touch-icon-precomposed" href="favicon-16x16.png">
+
+<!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. -->
+<link rel="icon" href="favicon-16x16.png">
 </head>
 <body>
     
