--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Lab2</title>
 <!-- For IE 9 and below ICO should be 32x32 pixels in size -->
 <!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
-
+<header>
+    <h1>Journals for the Past three days</h1>
+    <p>Posted at 11:34am 13th January 2014</p>
+</header>
 <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
 <link rel="apple-touch-icon-precomposed" href="favicon-16x16.png">
 
@@ -15,6 +18,6 @@
 <link rel="icon" href="favicon-16x16.png">
 </head>
 <body>
-    
+   <main> Hello World </main> 
 </body>
 </html>
