--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
 <header>
     <h1>Journals for the Past three days</h1>
-    <p>Posted at 11:34am 13th January 2014</p>
+    <p>Posted at 12:00 am 12th April 2021</p>
 </header>
 <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
 <link rel="apple-touch-icon-precomposed" href="favicon-16x16.png">
@@ -20,4 +20,7 @@
 <body>
    <main> Hello World </main> 
 </body>
+<footer>
+    Copyright Alec Smith 2021
+</footer>
 </html>
