--- a/index.html
+++ b/index.html
@@ -15,12 +15,16 @@
 </head>
 
 <body>
-<header>
-    <h1>Journals for the Past three days</h1>
-    <p>Posted at 12:00 am 12th April 2021</p>
-</header>
+    <header>
+        <h1>Journals for the Past three days</h1>
+        <p>Posted at 12:00 am 12th April 2021</p>
+        <div id="logo">Journals are tight</div>
+        <nav>...</nav>
 
-   <main> Hello World </main> 
+    </header>
+
+    <main role="main"> Hello World
+    </main> 
 </body>
 <footer>
     Copyright Alec Smith 2021
