--- a/index.html
+++ b/index.html
@@ -24,6 +24,14 @@
     </header>
 
     <main role="main"> Hello World
+        <article>
+            <h1>Day one (April 10, 2021)</h1>
+            <section>
+
+            </section>
+            <section>to do list</section>
+        </article>
+        <section>Day two</section>
     </main> 
 </body>
 <footer>
