add articles that hold each days data entry

--- a/index.html
+++ b/index.html
@@ -27,9 +27,20 @@
         <article>
             <h1>Day one (April 10, 2021)</h1>
             <section>
-
+                <ul>
+                    <li>Coffee</li>
+                    <li>Tea</li>
+                    <li>Milk</li>
+                  </ul> 
             </section>
             <section>to do list</section>
+        </article>
+        <article>
+            <h1>Day two (April 11, 2021)</h1>
+        </article>
+
+        <article>
+            <h1>Day three (April 13, 2021</h1>
         </article>
         <section>Day two</section>
     </main> 
