add to-do list and paragraph for day one

--- a/index.html
+++ b/index.html
@@ -27,14 +27,21 @@
         <article>
             <h1>Day one (April 10, 2021)</h1>
             <section>
-                <ul>
-                    <li>Coffee</li>
-                    <li>Tea</li>
-                    <li>Milk</li>
-                  </ul> 
+                <p>To-do List</p>
+                <ul> 
+                    <li>Finish cse 105 homework</li>
+                    <li>Do cse 101 quiz</li>
+                    <li>Do cse 105 quizzes</li>
+                </ul> 
             </section>
-            <section>to do list</section>
+            <section>
+                <p>This was a okay day production wise I did not get as much done as a needed to
+                    but, I got somethings done.
+                </p>
+            </section>
+            <section></section>
         </article>
+
         <article>
             <h1>Day two (April 11, 2021)</h1>
         </article>
@@ -42,7 +49,7 @@
         <article>
             <h1>Day three (April 13, 2021</h1>
         </article>
-        <section>Day two</section>
+
     </main> 
 </body>
 <footer>
