add ordered list for the highlights

--- a/index.html
+++ b/index.html
@@ -27,18 +27,27 @@
         <article>
             <h1>Day one (April 10, 2021)</h1>
             <section>
-                <p>To-do List</p>
+                <h2>To-do List</h2>
                 <ul> 
                     <li>Finish cse 105 homework</li>
                     <li>Do cse 101 quiz</li>
                     <li>Do cse 105 quizzes</li>
                 </ul> 
             </section>
+            <h2>Thoughts on the day</h2>
             <section>
                 <p>This was a okay day production wise I did not get as much done as a needed to
-                    but, I got somethings done.
+                    but, I got somethings done. I did not work hard enough.
                 </p>
             </section>
+            <h2>Highlights</h2>
+
+            <ol>
+            <li>learned so more about regex</li>
+            <li>Work done in cse 105</li>
+            <li>Stayed up late for once working</li>
+            </ol> 
+            <img href="https://duckduckgo.com/?t=canonical&q=random+image&atb=v182-1&iax=images&ia=images&iai=https%3A%2F%2Fimg.memecdn.com%2Ftyped-the-most-random-picture-on-the-internet_o_1993597.jpg">
             <section></section>
         </article>
 
