--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
             <li>Work done in cse 105</li>
             <li>Stayed up late for once working</li>
             </ol> 
-            <img href="https://duckduckgo.com/?t=canonical&q=random+image&atb=v182-1&iax=images&ia=images&iai=https%3A%2F%2Fimg.memecdn.com%2Ftyped-the-most-random-picture-on-the-internet_o_1993597.jpg">
+            <img src="the_end_is_upon_us.jpeg"
+            alt = "Has anyone seen my image?" height = "400" width = "400"/>
             <section></section>
         </article>
 
