add next two entires and audio file

--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
                     <li>Do cse 105 quizzes</li>
                 </ul> 
             </section>
-            <h2>Thoughts on the day</h2>
+            <h3>Thoughts on the day</h3>
             <section>
-                <p>This was a okay day production wise I did not get as much done as a needed to
+                <p>This was a <em>okay</em> day production wise I did not get as much done as a needed to
                     but, I got somethings done. I did not work hard enough.
                 </p>
             </section>
@@ -54,10 +54,59 @@
 
         <article>
             <h1>Day two (April 11, 2021)</h1>
+            <section>
+                <h2>To-do List</h2>
+                <ul> 
+                    <li>Wake up for church</li>
+                    <li>Have a good time with friends after church</li>
+                    <li>Wash clothes</li>
+                </ul>
+            </section>
+            <h3>Thoughts on the day</h3>
+            <section>
+                <p> <strong>Tis the Lord's day my dudes, rest and be glad in it.</strong>
+                    but, I got somethings done. I did not work hard enough.
+                </p>
+            </section>
+            <h2>Highlights</h2>
+
+            <ol>
+            <li>Heard the preaching of the word.</li>
+            <li>Took the Lord's supper to be reminded of the remission of my sins.</li>
+            <li>Got to spend time with my family.</li>
+            </ol> 
+            <audio></audio>
         </article>
 
         <article>
             <h1>Day three (April 13, 2021</h1>
+            <section>
+                <h2>To-do List</h2>
+                <ul> 
+                    <li>Finish my website for cse 110</li>
+                    <li>Read cse 101</li>
+                    <li>Prepare food</li>
+                </ul> 
+            </section>
+            <h3>Thoughts on the day</h3>
+            <section>
+                <p> I looked up this school late last night <a href="https://wcss.org/about-us/mission/">Let's go Royals!</a> 
+                    but, thought I would share it with myself today. <i>So yeah</i>, things are going okay I wasted alot of time today
+                    missed a few classes, took some falls but we are here. 
+                    <br>
+                </p>
+            </section>
+            <h2>Highlights</h2>
+
+            <ol>
+            <li>Learning html</li>
+            <li>Did, not lose my mind</li>
+            <li>Got to work on this website.</li>
+            </ol> 
+            <audio controls>
+               <source src="PSA024.mp3" type="audio/mp3">
+            </audio>
+            
         </article>
 
     </main> 
