add span and br and hr

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. -->
 <link rel="icon" href="favicon-16x16.png">
 </head>
-
+<span>Professor told me to add a span so here it is at the top!</span>
 <body>
     <header>
         <h1>Journals for the Past three days</h1>
@@ -51,7 +51,7 @@
             alt = "Has anyone seen my image?" height = "400" width = "400"/>
             <section></section>
         </article>
-
+        <br>
         <article>
             <h1>Day two (April 11, 2021)</h1>
             <section>
@@ -77,7 +77,7 @@
             </ol> 
             <audio></audio>
         </article>
-
+        <br>
         <article>
             <h1>Day three (April 13, 2021</h1>
             <section>
@@ -93,7 +93,8 @@
                 <p> I looked up this school late last night <a href="https://wcss.org/about-us/mission/">Let's go Royals!</a> 
                     but, thought I would share it with myself today. <i>So yeah</i>, things are going okay I wasted alot of time today
                     missed a few classes, took some falls but we are here. 
-                    <br>
+                    <hr> 
+                    All in all glory be to God for saving this day.
                 </p>
             </section>
             <h2>Highlights</h2>
@@ -106,7 +107,6 @@
             <audio controls>
                <source src="PSA024.mp3" type="audio/mp3">
             </audio>
-            
         </article>
 
     </main> 
