add picture header and video

--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
             <li>Work done in cse 105</li>
             <li>Stayed up late for once working</li>
             </ol> 
+            <h4>Random Picture is Random</h4>
             <img src="the_end_is_upon_us.jpeg"
             alt = "Has anyone seen my image?" height = "400" width = "400"/>
             <section></section>
         </article>
         <br>
+        <hr>
         <article>
             <h1>Day two (April 11, 2021)</h1>
             <section>
@@ -78,6 +80,7 @@
             <audio></audio>
         </article>
         <br>
+        <hr>
         <article>
             <h1>Day three (April 13, 2021</h1>
             <section>
@@ -93,7 +96,7 @@
                 <p> I looked up this school late last night <a href="https://wcss.org/about-us/mission/">Let's go Royals!</a> 
                     but, thought I would share it with myself today. <i>So yeah</i>, things are going okay I wasted alot of time today
                     missed a few classes, took some falls but we are here. 
-                    <hr> 
+                    <br> 
                     All in all glory be to God for saving this day.
                 </p>
             </section>
@@ -110,6 +113,9 @@
         </article>
 
     </main> 
+<h4>Finally I leave you with this goodnight and good health</h4>
+<video src="truck.mp4" width="600px" height="400" controls></video>
+
 </body>
 <footer>
     Copyright Alec Smith 2021
