add details with a surpise

--- a/index.html
+++ b/index.html
@@ -114,7 +114,12 @@
 
     </main> 
 <h4>Finally I leave you with this goodnight and good health</h4>
-<video src="truck.mp4" width="600px" height="400" controls></video>
+<details>
+    <summary>Living in Covid American</summary>
+    <p>ROFL</p>
+    <video src="truck.mp4" width="600px" height="400" controls></video>
+  </details> 
+
 
 </body>
 <footer>
