--- a/index.html
+++ b/index.html
@@ -113,14 +113,46 @@
         </article>
 
     </main> 
-<h4>Finally I leave you with this goodnight and good health</h4>
-<details>
-    <summary>Living in Covid American</summary>
-    <p>ROFL</p>
-    <video src="truck.mp4" width="600px" height="400" controls></video>
-  </details> 
+    <h4>Finally I leave you with this goodnight and good health</h4>
+    <details>
+        <summary>Living in Covid American</summary>
+        <p>ROFL</p>
+        <video src="truck.mp4" width="600px" height="400" controls></video>
+    </details> 
 
+    <h6>Now for the many forms</h6>
 
+    <form> 
+        <input type="text" required id="partNumber" pattern="[A-Z]{3}[0-9]{4}" />
+        <button>
+            Submit because we care 
+        </button>
+        <label for="w3review">Review of W3Schools:</label>
+
+        <textarea id="w3review" name="w3review" rows="4" cols="50">
+        At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
+        Yeah what they said up above.
+        </textarea> 
+
+        <label for="Schools">Choose your School from the list:</label>
+        <input list="Schools" name="School" id="School">
+        <hr> 
+        <datalist id="Schools">
+          <option value="Logos School">
+          <option value="Classical Conversations">
+          <option value="UCSD">
+          <option value="Carlsbad High School">
+          <option value="Prison">
+        </datalist> 
+        <label for="Careers">Choose a career:</label>
+
+        <select name="Careers" id="Careers">
+          <option value="computer guy">computer guy</option>
+          <option value="unemployed">unemployed</option>
+          <option value="mercedes">Mercedes</option>
+          <option value="it's a wonder life">it's a wonder life</option>
+        </select> 
+    </form>
 </body>
 <footer>
     Copyright Alec Smith 2021
