--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <label for="w3review">Review of W3Schools:</label>
 
         <textarea id="w3review" name="w3review" rows="4" cols="50">
-        At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
+        At schools.com you will learn. They offer tutorials in web technologies.
         Yeah what they said up above.
         </textarea> 
 
