--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lab2</title>
-<!-- For IE 9 and below ICO should be 32x32 pixels in size -->
-<!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
-<!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
-<link rel="apple-touch-icon-precomposed" href="favicon-16x16.png">
+    <!-- For IE 9 and below ICO should be 32x32 pixels in size -->
+    <!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
+    <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
+    <link rel="apple-touch-icon-precomposed" href="favicon-16x16.png">
 
-<!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. -->
-<link rel="icon" href="favicon-16x16.png">
+    <!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. -->
+    <link rel="icon" href="favicon-16x16.png">
 </head>
 <body>
     <span>Professor told me to add a span so here it is at the top!</span>
@@ -118,7 +118,7 @@
     <details>
         <summary>Living in Covid American</summary>
         <p>ROFL</p>
-        <video src="truck.mp4" width="600px" height="400" controls></video>
+        <video src="truck.mp4" width="600" height="400" controls></video>
     </details> 
 
     <h6>Now for the many forms</h6>
@@ -136,7 +136,7 @@
         </textarea> 
 
         <label for="Schools">Choose your School from the list:</label>
-        <input list="Schools" name="School" id="School">
+        <input list="Schools" name="School" id="Schools">
         <hr> 
         <datalist id="Schools">
           <option value="Logos School">
@@ -154,8 +154,9 @@
           <option value="it's a wonder life">it's a wonder life</option>
         </select> 
     </form>
+    <footer>
+        Copyright Alec Smith 2021
+    </footer>
 </body>
-<footer>
-    Copyright Alec Smith 2021
-</footer>
+
 </html>
