--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
         <label for="Schools">Choose your School from the list:</label>
         <input list="Schools" name="School" id="Schools">
         <hr> 
-        <datalist id="Schools">
+        <datalist id="School">
           <option value="Logos School">
           <option value="Classical Conversations">
           <option value="UCSD">
