--- a/index.html
+++ b/index.html
@@ -135,10 +135,10 @@
         Yeah what they said up above.
         </textarea> 
 
-        <label for="Schools">Choose your School from the list:</label>
-        <input list="Schools" name="School" id="Schools">
+        <label for="School">Choose your School from the list:</label>
+        <input list="Schools" name="School" id="School>
         <hr> 
-        <datalist id="School">
+        <datalist id="Schools">
           <option value="Logos School">
           <option value="Classical Conversations">
           <option value="UCSD">
