--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         </textarea> 
 
         <label for="School">Choose your School from the list:</label>
-        <input list="Schools" name="School" id="School>
+        <input list="Schools" name="School" id="School">
         <hr> 
         <datalist id="Schools">
           <option value="Logos School">
