add internal css

--- a/index.html
+++ b/index.html
@@ -49,6 +49,14 @@
             <li>Stayed up late for once working</li>
             </ol> 
             <h4>Random Picture is Random</h4>
+            <style>
+                img {
+                    width: 100;
+                    border-radius: 50;
+                    float: left;
+                    margin-right: 10;
+                }
+            </style>
             <img src="the_end_is_upon_us.jpeg"
             alt = "Has anyone seen my image?" height = "400" width = "400"/>
             <section></section>
