--- a/index.html
+++ b/index.html
@@ -1,170 +1,182 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lab2</title>
     <!-- For IE 9 and below ICO should be 32x32 pixels in size -->
-    <!--[if IE]><link rel="shortcut icon" href="path/to/favicon.ico"><![endif]-->
-    <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. --> 
-    <link rel="apple-touch-icon-precomposed" href="favicon-16x16.png">
+    <!--[if IE
+      ]><link rel="shortcut icon" href="path/to/favicon.ico"
+    /><![endif]-->
+    <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. -->
+    <link rel="apple-touch-icon-precomposed" href="favicon-16x16.png" />
 
     <!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. -->
-    <link rel="icon" href="favicon-16x16.png">
-</head>
-<body>
+    <link rel="icon" href="favicon-16x16.png" />
+  </head>
+  <body>
     <span>Professor told me to add a span so here it is at the top!</span>
 
     <header>
-        <h1>Journals for the Past three days</h1>
-        <p>Posted at 12:00 am 12th April 2021</p>
-        <div id="logo">Journals are tight</div>
-        <nav>...</nav>
-
+      <h1>Journals for the Past three days</h1>
+      <p>Posted at 12:00 am 12th April 2021</p>
+      <div id="logo">Journals are tight</div>
+      <nav>...</nav>
     </header>
 
-    <main role="main"> Hello World
-        <article>
-            <h1>Day one (April 10, 2021)</h1>
-            <section>
-                <h2>To-do List</h2>
-                <ul> 
-                    <li>Finish cse 105 homework</li>
-                    <li>Do cse 101 quiz</li>
-                    <li>Do cse 105 quizzes</li>
-                </ul> 
-            </section>
-            <h3>Thoughts on the day</h3>
-            <section>
-                <p>This was a <em>okay</em> day production wise I did not get as much done as a needed to
-                    but, I got somethings done. I did not work hard enough.
-                </p>
-            </section>
-            <h2>Highlights</h2>
+    <main role="main">
+      Hello World
+      <article>
+        <h1>Day one (April 10, 2021)</h1>
+        <section>
+          <h2>To-do List</h2>
+          <ul>
+            <li>Finish cse 105 homework</li>
+            <li>Do cse 101 quiz</li>
+            <li>Do cse 105 quizzes</li>
+          </ul>
+        </section>
+        <h3>Thoughts on the day</h3>
+        <section>
+          <p>
+            This was a <em>okay</em> day production wise I did not get as much
+            done as a needed to but, I got somethings done. I did not work hard
+            enough.
+          </p>
+        </section>
+        <h2>Highlights</h2>
 
-            <ol>
-            <li>learned so more about regex</li>
-            <li>Work done in cse 105</li>
-            <li>Stayed up late for once working</li>
-            </ol> 
-            <h4>Random Picture is Random</h4>
-            <style>
-                img {
-                    width: 100;
-                    border-radius: 50;
-                    float: left;
-                    margin-right: 10;
-                }
-            </style>
-            <img src="the_end_is_upon_us.jpeg"
-            alt = "Has anyone seen my image?" height = "400" width = "400"/>
-            <section></section>
-        </article>
-        <br>
-        <hr>
-        <article>
-            <h1>Day two (April 11, 2021)</h1>
-            <section>
-                <h2>To-do List</h2>
-                <ul> 
-                    <li>Wake up for church</li>
-                    <li>Have a good time with friends after church</li>
-                    <li>Wash clothes</li>
-                </ul>
-            </section>
-            <h3>Thoughts on the day</h3>
-            <section>
-                <p> <strong>Tis the Lord's day my dudes, rest and be glad in it.</strong>
-                    but, I got somethings done. I did not work hard enough.
-                </p>
-            </section>
-            <h2>Highlights</h2>
+        <ol>
+          <li>learned so more about regex</li>
+          <li>Work done in cse 105</li>
+          <li>Stayed up late for once working</li>
+        </ol>
+        <h4>Random Picture is Random</h4>
+        <style>
+          img {
+            width: 100;
+            border-radius: 50;
+            float: left;
+            margin-right: 101;
+          }
+        </style>
+        <img
+          src="the_end_is_upon_us.jpeg"
+          alt="Has anyone seen my image?"
+          height="400"
+          width="400"
+        />
+        <section></section>
+      </article>
+      <br />
+      <hr />
+      <article>
+        <h1>Day two (April 11, 2021)</h1>
+        <section>
+          <h2>To-do List</h2>
+          <ul>
+            <li>Wake up for church</li>
+            <li>Have a good time with friends after church</li>
+            <li>Wash clothes</li>
+          </ul>
+        </section>
+        <h3>Thoughts on the day</h3>
+        <section>
+          <p>
+            <strong
+              >Tis the Lord's day my dudes, rest and be glad in it.</strong
+            >
+            but, I got somethings done. I did not work hard enough.
+          </p>
+        </section>
+        <h2>Highlights</h2>
 
-            <ol>
-            <li>Heard the preaching of the word.</li>
-            <li>Took the Lord's supper to be reminded of the remission of my sins.</li>
-            <li>Got to spend time with my family.</li>
-            </ol> 
-            <audio></audio>
-        </article>
-        <br>
-        <hr>
-        <article>
-            <h1>Day three (April 13, 2021</h1>
-            <section>
-                <h2>To-do List</h2>
-                <ul> 
-                    <li>Finish my website for cse 110</li>
-                    <li>Read cse 101</li>
-                    <li>Prepare food</li>
-                </ul> 
-            </section>
-            <h3>Thoughts on the day</h3>
-            <section>
-                <p> I looked up this school late last night <a href="https://wcss.org/about-us/mission/">Let's go Royals!</a> 
-                    but, thought I would share it with myself today. <i>So yeah</i>, things are going okay I wasted alot of time today
-                    missed a few classes, took some falls but we are here. 
-                    <br> 
-                    All in all glory be to God for saving this day.
-                </p>
-            </section>
-            <h2>Highlights</h2>
+        <ol>
+          <li>Heard the preaching of the word.</li>
+          <li>
+            Took the Lord's supper to be reminded of the remission of my sins.
+          </li>
+          <li>Got to spend time with my family.</li>
+        </ol>
+        <audio></audio>
+      </article>
+      <br />
+      <hr />
+      <article>
+        <h1>Day three (April 13, 2021</h1>
+        <section>
+          <h2>To-do List</h2>
+          <ul>
+            <li>Finish my website for cse 110</li>
+            <li>Read cse 101</li>
+            <li>Prepare food</li>
+          </ul>
+        </section>
+        <h3>Thoughts on the day</h3>
+        <section>
+          <p>
+            I looked up this school late last night
+            <a href="https://wcss.org/about-us/mission/">Let's go Royals!</a>
+            but, thought I would share it with myself today. <i>So yeah</i>,
+            things are going okay I wasted alot of time today missed a few
+            classes, took some falls but we are here.
+            <br />
+            All in all glory be to God for saving this day.
+          </p>
+        </section>
+        <h2>Highlights</h2>
 
-            <ol>
-            <li>Learning html</li>
-            <li>Did, not lose my mind</li>
-            <li>Got to work on this website.</li>
-            </ol> 
-            <audio controls>
-               <source src="PSA024.mp3" type="audio/mp3">
-            </audio>
-        </article>
-
-    </main> 
+        <ol>
+          <li>Learning html</li>
+          <li>Did, not lose my mind</li>
+          <li>Got to work on this website.</li>
+        </ol>
+        <audio controls>
+          <source src="PSA024.mp3" type="audio/mp3" />
+        </audio>
+      </article>
+    </main>
     <h4>Finally I leave you with this goodnight and good health</h4>
     <details>
-        <summary>Living in Covid American</summary>
-        <p>ROFL</p>
-        <video src="truck.mp4" width="600" height="400" controls></video>
-    </details> 
+      <summary>Living in Covid American</summary>
+      <p>ROFL</p>
+      <video src="truck.mp4" width="600" height="400" controls></video>
+    </details>
 
     <h6>Now for the many forms</h6>
 
-    <form> 
-        <input type="text" required id="partNumber" pattern="[A-Z]{3}[0-9]{4}" />
-        <button>
-            Submit because we care 
-        </button>
-        <label for="w3review">Review of W3Schools:</label>
+    <form>
+      <input type="text" required id="partNumber" pattern="[A-Z]{3}[0-9]{4}" />
+      <button>Submit because we care</button>
+      <label for="w3review">Review of W3Schools:</label>
 
-        <textarea id="w3review" name="w3review" rows="4" cols="50">
+      <textarea id="w3review" name="w3review" rows="4" cols="50">
         At schools.com you will learn. They offer tutorials in web technologies.
         Yeah what they said up above.
-        </textarea> 
+        </textarea
+      >
 
-        <label for="School">Choose your School from the list:</label>
-        <input list="Schools" name="School" id="School">
-        <hr> 
-        <datalist id="Schools">
-          <option value="Logos School">
-          <option value="Classical Conversations">
-          <option value="UCSD">
-          <option value="Carlsbad High School">
-          <option value="Prison">
-        </datalist> 
-        <label for="Careers">Choose a career:</label>
+      <label for="School">Choose your School from the list:</label>
+      <input list="Schools" name="School" id="School" />
+      <hr />
+      <datalist id="Schools">
+        <option value="Logos School"></option>
+        <option value="Classical Conversations"></option>
+        <option value="UCSD"></option>
+        <option value="Carlsbad High School"></option>
+        <option value="Prison"></option>
+      </datalist>
 
-        <select name="Careers" id="Careers">
-          <option value="computer guy">computer guy</option>
-          <option value="unemployed">unemployed</option>
-          <option value="mercedes">Mercedes</option>
-          <option value="it's a wonder life">it's a wonder life</option>
-        </select> 
+      <label for="Careers">Choose a career:</label>
+
+      <select name="Careers" id="Careers">
+        <option value="computer guy">computer guy</option>
+        <option value="unemployed">unemployed</option>
+        <option value="mercedes">Mercedes</option>
+        <option value="it's a wonder life">it's a wonder life</option>
+      </select>
     </form>
-    <footer>
-        Copyright Alec Smith 2021
-    </footer>
-</body>
-
+    <footer>Copyright Alec Smith 2021</footer>
+  </body>
 </html>
