--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lab2</title>
+    <title style="color: black">Lab3</title>
     <!-- For IE 9 and below ICO should be 32x32 pixels in size -->
     <!--[if IE
       ]><link rel="shortcut icon" href="path/to/favicon.ico"
