--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     /><![endif]-->
     <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. -->
     <link rel="apple-touch-icon-precomposed" href="favicon-16x16.png" />
-
+    <link rel="stylesheet" href="style.css" />
     <!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. -->
     <link rel="icon" href="favicon-16x16.png" />
   </head>
