create box class and style it

--- a/index.html
+++ b/index.html
@@ -61,12 +61,14 @@
             margin-right: 101;
           }
         </style>
-        <img
-          src="the_end_is_upon_us.jpeg"
-          alt="Has anyone seen my image?"
-          height="400"
-          width="400"
-        />
+        <div class="box">
+          <img
+            src="the_end_is_upon_us.jpeg"
+            alt="Has anyone seen my image?"
+            height="400"
+            width="400"
+          />
+        </div>
         <section></section>
       </article>
       <br />
