--- a/index.html
+++ b/index.html
@@ -54,11 +54,9 @@
         </ol>
         <h4>Random Picture is Random</h4>
         <style>
-          img {
-            width: 100;
-            border-radius: 50;
-            float: left;
-            margin-right: 101;
+          h4 {
+            color: #AABBFB;
+          }
           }
         </style>
         <div class="box">
