--- a/index.html
+++ b/index.html
@@ -55,8 +55,7 @@
         <h4>Random Picture is Random</h4>
         <style>
           h4 {
-            color: #AABBFB;
-          }
+            color: #aabbfb;
           }
         </style>
         <div class="box">
