--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     /><![endif]-->
     <!-- Touch Icons - iOS and Android 2.1+ 180x180 pixels in size. -->
     <link rel="apple-touch-icon-precomposed" href="favicon-16x16.png" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <!-- Firefox, Chrome, Safari, IE 11+, Edge, and Opera. 196x196 pixels in size. -->
     <link rel="icon" href="favicon-16x16.png" />
   </head>
   <body>
     <span>Professor told me to add a span so here it is at the top!</span>
 
-    <header>
+    <header class="top_header">
       <h1>Journals for the Past three days</h1>
       <p>Posted at 12:00 am 12th April 2021</p>
       <div id="logo">Journals are tight</div>
